# applyforge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/src/: app.py
backend/src/lib/: parser.py
backend/src/lib/llm/: __init__.py  base.py  bedrock.py  factory.py  openai.py
backend/src/services/: bullet_service.py  cover_letter_service.py  resume_service.py
career_ai/: cli.py  config.py  default_config.yaml
career_ai/agent/: graph.py  nodes.py  state.py
career_ai/core/: ats.py  extractor.py  generator.py  interviewer.py  polisher.py  reviewer.py  scraper.py
career_ai/llm/: client.py  tokens.py
career_ai/utils/: logging.py  output.py
career_ai/vault/: ingest.py  query.py
codelens-cli/: .gitignore  Makefile  codelens.config.yaml  requirements.txt  setup.py
codelens-cli/codelens/: cli.py
codelens-cli/codelens/agents/: coordinator_agent.py  worker_agent.py
codelens-cli/codelens/config/: parser.py
codelens-cli/codelens/core/: chunking.py  compressor.py  discovery.py
codelens-cli/codelens/output/: markdown_builder.py
codelens-cli/tests/: test_agents.py  test_discovery.py
docs/: plan.md  plat.md  spec.2.0.md  spec.md  user-guide.md
frontend/: .env.local  index.html  package.json
frontend/src/: App.tsx
infra/: cdk.json  package.json  tsconfig.json
output/: polished_cv.md
tests/: test_cli.py  test_extractor.py
