[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "career-ai"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
career-ai = "career_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["career_ai*"]
